Consegna esercizio Terminato

--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 id="visual"></h2>
-    <Script src="js/main1.js"></Script>
+    <h2 id="Results"></h2>
+
+        </div>
+    <script src="js/main2.js"></script>
     
 </body>
 </html>
